2002-05-18  Philippe Elie  <phil.el@wanadoo.fr>

	* module/compat.h:
	* module/op_fixmap.c:
	* module/op_syscalls.c:
	* module/oprofile.c:
	* module/oprofile.h:
	* module/oprofile_nmi.S: fix module up to kernel 2.5.15

	* module/compat22.h: small fix for 2.2

2002-05-17  Philippe Elie  <phil.el@wanadoo.fr>

	* module/op_fixmap.c: revert my last change :/. Something is
	  wrong with oprofiel and 2.5.15 but elsewhere

2002-05-17  Philippe Elie  <phil.el@wanadoo.fr>

	* module/op_fixmap.c: fix a long time outstanding bug,
	  we tested bit in the address of x86_capability
	  rather the capability itself.

2002-05-17  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_proc.c: from a typo in opd_put_image_samples first
	  incoming samples for each image was always ignored. As
	  a side effect if opd_open_sample_file() fail the daemon
	  will die with a seg fault. This behavior is in 0.2 release.
	  fix #556918

2002-05-17  John Levon  <moz@compsoc.man.ac.uk>

	* utils/op_start: typo in detect stale lock file

2002-05-17  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/*: gcc 3.1 compilation.

2002-05-16  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_proc.c: close samples files at cleanup

	* libdb/db-insert.cpp: if we don't lock the file when creating
	  the root we must ensure than initialization is atomic

	* pp/op_bfd.cpp:
	* pp/op_bfd.h:
	* pp/op_time.cpp:
	* pp/op_to_source.cpp:
	* pp/oprofpp.cpp:
	* pp/oprofpp.h:
	* pp/oprofpp_util.cpp:
	* pp/samples_file.cpp:
	* pp/samples_file.h: move all coherency check between a op_bfd and
	  it's related opp_samples_files outside these class

	* pp/samples_container.cpp: small modification allowing to privatize
	  op_bfd::ibfd pointer.

2002-05-16  John Levon  <moz@compsoc.man.ac.uk>

	* libutil/op_lockfile.c: detect and remove stale
	  lock files

	* utils/op_start: detect stale lock file
 
2002-05-15  John Levon  <moz@compsoc.man.ac.uk>

	* pp/Makefile.in:
	* pp/op_time.cpp:
	* pp/op_to_source.cpp:
	* pp/oprofpp.cpp: