@@ -1,3 +1,14 @@
+2002-05-19  John Levon  <moz@compsoc.man.ac.uk>
+
+	* pp/op_bfd.cpp: fix bug coming from mis-placed
+	strlen() brackets
+ 
+	* pp/op_bfd.h:
+	* pp/op_bfd.cpp: kill some more char[]s to avoid silly
+	  bugs like the above
+ 
+	* README: some minor change
+ 
 2002-05-18  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* module/compat.h:
